--- a/SecondKadaiApp/Base.lproj/Main.storyboard
+++ b/SecondKadaiApp/Base.lproj/Main.storyboard
@@ -16,14 +16,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前を入力してください" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17A-iI-7OM">
-                                <rect key="frame" x="111.5" y="144" width="191" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="npa-BJ-iaG">
+                                <rect key="frame" x="191" y="264.5" width="32" height="34"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xew-Ef-pwe">
-                                <rect key="frame" x="176" y="399" width="62" height="31"/>
+                                <rect key="frame" x="176" y="398.5" width="62" height="31"/>
+                                <color key="backgroundColor" systemColor="systemPinkColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="PUSH"/>
                                 <connections>
@@ -31,21 +32,23 @@
                                     <segue destination="SoN-NA-ckS" kind="show" id="6vl-8i-mVO"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="npa-BJ-iaG">
-                                <rect key="frame" x="191" y="265" width="32" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前を入力してください" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17A-iI-7OM">
+                                <rect key="frame" x="111.5" y="144" width="191" height="20.5"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="npa-BJ-iaG" firstAttribute="top" secondItem="17A-iI-7OM" secondAttribute="bottom" constant="100" id="GOR-Z8-Dgw"/>
-                            <constraint firstItem="xew-Ef-pwe" firstAttribute="top" secondItem="npa-BJ-iaG" secondAttribute="bottom" constant="100" id="fm5-Jk-phk"/>
-                            <constraint firstItem="xew-Ef-pwe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gpY-c6-mxh"/>
-                            <constraint firstItem="17A-iI-7OM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hy8-Vn-iBL"/>
-                            <constraint firstItem="npa-BJ-iaG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="spg-2z-k8x"/>
-                            <constraint firstItem="17A-iI-7OM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="vgd-JA-A4W"/>
+                            <constraint firstItem="xew-Ef-pwe" firstAttribute="top" secondItem="npa-BJ-iaG" secondAttribute="bottom" constant="100" id="EhX-F8-QNp"/>
+                            <constraint firstItem="npa-BJ-iaG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WAC-8d-uGH"/>
+                            <constraint firstItem="17A-iI-7OM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="XoT-cA-aFg"/>
+                            <constraint firstItem="17A-iI-7OM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xqx-SO-q9R"/>
+                            <constraint firstItem="npa-BJ-iaG" firstAttribute="top" secondItem="17A-iI-7OM" secondAttribute="bottom" constant="100" id="g1X-MX-CSC"/>
+                            <constraint firstItem="xew-Ef-pwe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ySV-Dq-RDv"/>
                         </constraints>
                     </view>
                     <connections>
@@ -64,14 +67,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="odt-BE-HbL">
-                                <rect key="frame" x="186" y="100" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="odt-BE-HbL">
+                                <rect key="frame" x="186.5" y="100" width="41.5" height="20.5"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kp6-e1-hdo">
-                                <rect key="frame" x="176.5" y="221" width="61" height="31"/>
+                                <rect key="frame" x="176.5" y="220.5" width="61" height="31"/>
+                                <color key="backgroundColor" systemColor="systemPinkColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="BACK"/>
                                 <connections>
@@ -82,10 +87,10 @@
                         <viewLayoutGuide key="safeArea" id="ueC-9K-Vjk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="odt-BE-HbL" firstAttribute="top" secondItem="ueC-9K-Vjk" secondAttribute="top" constant="100" id="MdD-aZ-vRP"/>
-                            <constraint firstItem="Kp6-e1-hdo" firstAttribute="centerX" secondItem="RFC-T6-uaV" secondAttribute="centerX" id="oqc-bj-Thh"/>
-                            <constraint firstItem="Kp6-e1-hdo" firstAttribute="top" secondItem="odt-BE-HbL" secondAttribute="bottom" constant="100" id="tvC-lf-1q2"/>
-                            <constraint firstItem="odt-BE-HbL" firstAttribute="centerX" secondItem="RFC-T6-uaV" secondAttribute="centerX" id="zEi-0q-8k2"/>
+                            <constraint firstItem="odt-BE-HbL" firstAttribute="top" secondItem="ueC-9K-Vjk" secondAttribute="top" constant="100" id="Mzy-yC-Nzy"/>
+                            <constraint firstItem="Kp6-e1-hdo" firstAttribute="centerX" secondItem="RFC-T6-uaV" secondAttribute="centerX" id="OcJ-Ha-3lp"/>
+                            <constraint firstItem="Kp6-e1-hdo" firstAttribute="top" secondItem="odt-BE-HbL" secondAttribute="bottom" constant="100" id="SjP-0A-GrH"/>
+                            <constraint firstItem="odt-BE-HbL" firstAttribute="centerX" secondItem="RFC-T6-uaV" secondAttribute="centerX" id="Wuv-CG-jJx"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="YUO-be-1fR"/>
@@ -96,12 +101,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nQz-mC-ZJT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="kia-iR-gJD" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="665" y="70"/>
+            <point key="canvasLocation" x="663.768115942029" y="69.642857142857139"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
